# weather-prediction-mlops

./: .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  dvc.yaml  env.example  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cd-master.yml  ci-dev.yml  ci-test.yml
airflow/dags/: __init__.py  weather_etl_dag.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus_rules/: alerts.yml
scripts/: generate_sample_data.py  run_pipeline.py  setup_dagshub.py
src/: __init__.py  config.py
src/api/: __init__.py  app.py
src/data/: __init__.py  extract.py  quality_checks.py  transform.py
src/models/: __init__.py  predict.py  train.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  test_api.py  test_data_quality.py  test_transform.py
